sms/email activity endpoints on CrmController + refactors in SfdcClient to handle IN vs LIKE clauses in getBulkResults [sc-26121]